# hb-scan

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: contributing.md  taxonomy.md  user-guide.md
src/hb_scan/: __init__.py  cli.py  compliance.py  enrichments.py  history.py  insights.py  messages.py  scheduler.py
src/hb_scan/discover/: __init__.py  base.py  claude.py  registry.py
src/hb_scan/models/: __init__.py  finding.py  posture.py  session.py
src/hb_scan/normalize/: __init__.py
src/hb_scan/report/: __init__.py  html.py  json_report.py  terminal.py
src/hb_scan/rules/: __init__.py  engine.py  schema.py
src/hb_scan/rules/builtin/: credential_patterns.yml  dh01_secret_exposure.yml  dh02_unsafe_code.yml  dh03_dangerous_commands.yml  dh04_sensitive_data.yml  dh05_supply_chain.yml  dh06_scope_violation.yml  dh07_ip_leakage.yml  dh08_regulatory_data.yml  dh09_excessive_reliance.yml
src/hb_scan/scoring/: __init__.py
src/hb_scan/telemetry/: __init__.py  anonymous.py
tests/: test_cli.py  test_compliance.py  test_discover_claude.py  test_enrichments.py  test_insights.py  test_models.py  test_rules_engine.py
tests/fixtures/: claude_session.jsonl
